Make sure that the whitelabel pricing page is centered and the VAT text aligns with the pricing boxes.

--- a/public/less/utils.less
+++ b/public/less/utils.less
@@ -304,6 +304,7 @@
 }
 
 .label-with-link a {
+  font-weight: 400;
   color: #5C7599;
   &:visited {
     color: #425A7C;
